--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,59 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>All Verifications | Wisteria Trust</title>
-  <link rel="stylesheet" href="admin.css" />
-</head>
-<body>
 
-<header class="admin-header">
-  <h1>Wisteria Trust – Admin</h1>
-  <nav>
-    <a href="create.html">Create</a>
-    <a href="dashboard.html" class="active">All Verifications</a>
-    <button onclick="logout()">Logout</button>
-  </nav>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+  <script>
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            primary: "#d4af35",
+            bgDark: "#0f172a",
+            cardDark: "#1e293b"
+          },
+          fontFamily: {
+            sans: ["Inter", "sans-serif"]
+          }
+        }
+      }
+    }
+  </script>
+</head>
+
+<body class="bg-bgDark text-white font-sans min-h-screen">
+
+<!-- HEADER -->
+<header class="sticky top-0 z-50 bg-[#0b1220] border-b border-white/10">
+  <div class="max-w-[1400px] mx-auto px-4 h-16 flex items-center justify-between">
+    <h1 class="font-bold text-lg">
+      Wisteria Trust <span class="text-primary">Admin</span>
+    </h1>
+
+    <nav class="flex items-center gap-3 text-sm">
+      <a href="create.html" class="px-4 py-2 rounded hover:bg-white/10">Create</a>
+      <a href="dashboard.html" class="px-4 py-2 rounded bg-primary text-black font-semibold">
+        All Verifications
+      </a>
+      <button onclick="logout()" class="px-4 py-2 rounded bg-red-600 hover:bg-red-700">
+        Logout
+      </button>
+    </nav>
+  </div>
 </header>
 
-<main class="admin-container">
+<!-- MAIN -->
+<main class="max-w-[1400px] mx-auto p-4 md:p-6">
 
-  <section class="card">
-    <h2>All Verifications</h2>
+  <!-- PAGE TITLE -->
+  <div class="mb-6">
+    <h2 class="text-2xl font-bold">All Verifications</h2>
+    <p class="text-gray-400 text-sm">Manage seller verification records</p>
+  </div>
 
-    <div class="controls">
-      <input id="searchInput" placeholder="Search ID or Seller" oninput="applyFilters()" />
-      <select id="statusFilter" onchange="applyFilters()">
-        <option value="ALL">All</option>
-        <option value="ACTIVE">ACTIVE</option>
-        <option value="REVOKED">REVOKED</option>
-        <option value="EXPIRED">EXPIRED</option>
-      </select>
-    </div>
+  <!-- CONTROLS -->
+  <div class="flex flex-col md:flex-row gap-4 mb-4">
+    <input id="searchInput"
+      oninput="applyFilters()"
+      placeholder="Search ID or Seller"
+      class="w-full md:w-72 rounded bg-[#0b1220] border border-white/10"/>
 
-    <div class="table-scroll">
-      <table>
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Seller</th>
-            <th>Business</th>
-            <th>City</th>
-            <th>Email</th>
-            <th>Status</th>
-            <th>Expiry</th>
-            <th>Created</th>
-            <th>Seller Page</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="list"></tbody>
-      </table>
-    </div>
-  </section>
+    <select id="statusFilter"
+      onchange="applyFilters()"
+      class="w-full md:w-48 rounded bg-[#0b1220] border border-white/10">
+      <option value="ALL">All Status</option>
+      <option value="ACTIVE">ACTIVE</option>
+      <option value="REVOKED">REVOKED</option>
+      <option value="EXPIRED">EXPIRED</option>
+    </select>
+  </div>
+
+  <!-- TABLE -->
+  <div class="overflow-x-auto rounded-lg border border-white/10 bg-cardDark">
+    <table class="min-w-[1100px] w-full text-sm">
+      <thead class="bg-[#0b1220] text-gray-400">
+        <tr>
+          <th class="px-4 py-3 text-left">ID</th>
+          <th class="px-4 py-3 text-left">Seller</th>
+          <th class="px-4 py-3 text-left">Business</th>
+          <th class="px-4 py-3">City</th>
+          <th class="px-4 py-3">Email</th>
+          <th class="px-4 py-3 text-center">Status</th>
+          <th class="px-4 py-3">Expiry</th>
+          <th class="px-4 py-3">Created</th>
+          <th class="px-4 py-3 text-center">Seller Page</th>
+          <th class="px-4 py-3 text-right">Actions</th>
+        </tr>
+      </thead>
+
+      <tbody id="list" class="divide-y divide-white/10"></tbody>
+    </table>
+  </div>
 
 </main>
 
+<!-- BACKEND JS -->
 <script src="admin.js"></script>
+
 </body>
 </html>
