--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -100,10 +100,85 @@
   </div>
 
 </main>
+<!-- ===============================
+     EDIT VERIFICATION MODAL
+================================ -->
+<div id="editModal"
+     style="display:none"
+     class="fixed inset-0 z-50 flex items-center justify-center bg-black/70 backdrop-blur-sm px-4">
+
+  <div class="w-full max-w-md rounded-xl bg-[#0f172a] border border-[#334155] shadow-2xl">
+
+    <!-- HEADER -->
+    <div class="flex items-center justify-between px-6 py-4 border-b border-[#334155]">
+      <h3 class="text-lg font-bold text-white">Edit Verification</h3>
+      <button onclick="closeModal()"
+              class="text-slate-400 hover:text-white text-xl">
+        ✕
+      </button>
+    </div>
+
+    <!-- BODY -->
+    <div class="px-6 py-5 space-y-4">
+
+      <div>
+        <label class="block text-sm text-slate-300 mb-1">Seller Name</label>
+        <input id="eSeller"
+               class="w-full rounded-lg bg-[#020617] border border-[#334155] px-4 py-2 text-white focus:ring-2 focus:ring-[#d4af35]"
+               placeholder="Seller Name">
+      </div>
+
+      <div>
+        <label class="block text-sm text-slate-300 mb-1">Business Name</label>
+        <input id="eBusiness"
+               class="w-full rounded-lg bg-[#020617] border border-[#334155] px-4 py-2 text-white focus:ring-2 focus:ring-[#d4af35]"
+               placeholder="Business Name">
+      </div>
+
+      <div>
+        <label class="block text-sm text-slate-300 mb-1">City</label>
+        <input id="eCity"
+               class="w-full rounded-lg bg-[#020617] border border-[#334155] px-4 py-2 text-white focus:ring-2 focus:ring-[#d4af35]"
+               placeholder="City">
+      </div>
+
+      <div>
+        <label class="block text-sm text-slate-300 mb-1">Email</label>
+        <input id="eEmail"
+               type="email"
+               class="w-full rounded-lg bg-[#020617] border border-[#334155] px-4 py-2 text-white focus:ring-2 focus:ring-[#d4af35]"
+               placeholder="Email">
+      </div>
+
+      <div>
+        <label class="block text-sm text-slate-300 mb-1">Expiry Date</label>
+        <input id="eExpiry"
+               type="date"
+               class="w-full rounded-lg bg-[#020617] border border-[#334155] px-4 py-2 text-white focus:ring-2 focus:ring-[#d4af35]">
+      </div>
+
+    </div>
+
+    <!-- FOOTER -->
+    <div class="flex justify-end gap-3 px-6 py-4 border-t border-[#334155]">
+      <button onclick="closeModal()"
+              class="px-4 py-2 rounded-lg border border-[#334155] text-slate-300 hover:bg-white/5">
+        Cancel
+      </button>
+
+      <button onclick="saveEdit()"
+              class="px-6 py-2 rounded-lg bg-[#d4af35] text-black font-bold hover:bg-[#bfa030]">
+        Save Changes
+      </button>
+    </div>
+
+  </div>
+</div>
 
 <!-- BACKEND JS -->
 <script src="admin.js"></script>
 
 </body>
 </html>
+
 
