--- a/admin/create.html
+++ b/admin/create.html
@@ -92,46 +92,67 @@
           </p>
         </div>
 
-        <!-- FORM -->
-        <form id="createVerificationForm" class="px-6 sm:px-10 py-8 flex flex-col gap-6">
+   <form id="createVerificationForm" class="px-6 sm:px-10 py-8 flex flex-col gap-6">
 
-          <label class="flex flex-col gap-2">
-            <span class="text-sm font-medium">Seller Name</span>
-            <input id="sellerName" type="text" required
-              class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
-          </label>
+  <label class="flex flex-col gap-2">
+    <span class="text-sm font-medium">Seller Name</span>
+    <input
+      id="sellerName"
+      name="sellerName"
+      type="text"
+      required
+      class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
+  </label>
 
-          <label class="flex flex-col gap-2">
-            <span class="text-sm font-medium">Business Name</span>
-            <input id="businessName" type="text" required
-              class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
-          </label>
+  <label class="flex flex-col gap-2">
+    <span class="text-sm font-medium">Business Name</span>
+    <input
+      id="businessName"
+      name="businessName"
+      type="text"
+      required
+      class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
+  </label>
 
-          <label class="flex flex-col gap-2">
-            <span class="text-sm font-medium">Email Address</span>
-            <input id="email" type="email" required
-              class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
-          </label>
+  <label class="flex flex-col gap-2">
+    <span class="text-sm font-medium">Email Address</span>
+    <input
+      id="email"
+      name="email"
+      type="email"
+      required
+      class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
+  </label>
 
-          <label class="flex flex-col gap-2">
-            <span class="text-sm font-medium">City</span>
-            <input id="city" type="text" required
-              class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
-          </label>
+  <label class="flex flex-col gap-2">
+    <span class="text-sm font-medium">City</span>
+    <input
+      id="city"
+      name="city"
+      type="text"
+      required
+      class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
+  </label>
 
-          <label class="flex flex-col gap-2">
-            <span class="text-sm font-medium">Expiry Date</span>
-            <input id="expiryDate" type="date" required
-              class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
-          </label>
+  <label class="flex flex-col gap-2">
+    <span class="text-sm font-medium">Expiry Date</span>
+    <input
+      id="expiryDate"
+      name="expiryDate"
+      type="date"
+      required
+      class="form-input h-14 rounded-lg bg-gray-50 dark:bg-input-dark border-gray-300 dark:border-border-dark"/>
+  </label>
 
-          <button type="submit"
-            class="h-14 bg-primary text-slate-900 font-bold rounded-lg shadow-lg hover:bg-[#e0ac05] flex items-center justify-center gap-2">
-            <span class="material-symbols-outlined">add_link</span>
-            Create Verification
-          </button>
+  <button
+    type="submit"
+    class="h-14 bg-primary text-slate-900 font-bold rounded-lg shadow-lg hover:bg-[#e0ac05] flex items-center justify-center gap-2">
+    <span class="material-symbols-outlined">add_link</span>
+    Create Verification
+  </button>
 
-        </form>
+</form>
+
       </div>
 
       <p class="text-center text-sm text-slate-500 mt-6">
@@ -146,3 +167,4 @@
 <script src="./admin.js"></script>
 </body>
 </html>
+
