--- a/admin/create.html
+++ b/admin/create.html
@@ -162,9 +162,19 @@
     </div>
   </main>
 </div>
+<!-- DUMMY ELEMENTS REQUIRED BY admin.js (DO NOT REMOVE) -->
+<div class="hidden">
+  <table>
+    <tbody id="verificationTable"></tbody>
+  </table>
+
+  <div id="pagination"></div>
+  <span id="totalCount"></span>
+</div>
 
 <!-- 🔑 SINGLE JS FILE (DO NOT CHANGE LOGIC) -->
 <script src="./admin.js"></script>
 </body>
 </html>
+
 
