--- a/admin/login.html
+++ b/admin/login.html
@@ -16,11 +16,12 @@
       
       <form id="loginForm" class="login-form">
         <div class="form-group">
-          <label for="username">Username</label>
+          <!-- Changed from username to email to match old working code -->
+          <label for="email">Username</label>
           <input 
             type="text" 
-            id="username" 
-            name="username" 
+            id="email" 
+            name="email" 
             required 
             autocomplete="username"
             placeholder="Enter your username"
