--- a/admin/create.html
+++ b/admin/create.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
+    <!-- Animated Background -->
+    <div class="login-background">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+    </div>
+
     <!-- Header -->
     <header class="admin-header">
         <div class="header-content">
@@ -22,44 +31,107 @@
     </header>
 
     <!-- Main Content -->
-    <main class="main-content">
+    <main class="main-content create-page-main">
         <div class="container">
-            <div class="card create-card">
-                <div class="card-header">
-                    <h2>Create New Verification</h2>
-                    <p class="card-subtitle">Add a new verified seller to the platform</p>
+            <div class="create-card-wrapper">
+                <!-- Added professional card with icon header -->
+                <div class="create-icon-wrapper">
+                    <svg class="create-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                    </svg>
                 </div>
-
-                <form class="create-form" onsubmit="return false;">
-                    <div class="form-group">
-                        <label for="sellerName">Seller Name</label>
-                        <input type="text" id="sellerName" class="form-input" placeholder="Enter seller's full name" required>
+                
+                <div class="card create-card">
+                    <div class="card-header create-header">
+                        <h2>Create New Verification</h2>
+                        <p class="card-subtitle">Add a new verified seller to the platform</p>
                     </div>
 
-                    <div class="form-group">
-                        <label for="businessName">Business Name</label>
-                        <input type="text" id="businessName" class="form-input" placeholder="Enter business name" required>
-                    </div>
+                    <form class="create-form" onsubmit="return false;">
+                        <!-- Added icons to form inputs -->
+                        <div class="form-group">
+                            <label for="sellerName">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="12" cy="7" r="4"></circle>
+                                </svg>
+                                Seller Name
+                            </label>
+                            <div class="input-wrapper">
+                                <input type="text" id="sellerName" class="form-input" placeholder="Enter seller's full name" required>
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" class="form-input" placeholder="seller@example.com" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="businessName">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                                </svg>
+                                Business Name
+                            </label>
+                            <div class="input-wrapper">
+                                <input type="text" id="businessName" class="form-input" placeholder="Enter business name" required>
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="city">City</label>
-                        <input type="text" id="city" class="form-input" placeholder="Enter city" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="email">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                                    <polyline points="22,6 12,13 2,6"></polyline>
+                                </svg>
+                                Email
+                            </label>
+                            <div class="input-wrapper">
+                                <input type="email" id="email" class="form-input" placeholder="seller@example.com" required>
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="expiryDate">Expiry Date</label>
-                        <input type="date" id="expiryDate" class="form-input" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="city">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                    <circle cx="12" cy="10" r="3"></circle>
+                                </svg>
+                                City
+                            </label>
+                            <div class="input-wrapper">
+                                <input type="text" id="city" class="form-input" placeholder="Enter city" required>
+                            </div>
+                        </div>
 
-                    <div class="form-actions">
-                        <button type="submit" class="btn-primary">Create Verification</button>
+                        <div class="form-group">
+                            <label for="expiryDate">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                                </svg>
+                                Expiry Date
+                            </label>
+                            <div class="input-wrapper">
+                                <input type="date" id="expiryDate" class="form-input" required>
+                            </div>
+                        </div>
+
+                        <div class="form-actions">
+                            <!-- Enhanced button with icon and animation -->
+                            <button type="submit" class="btn-primary create-submit-btn">
+                                <span>Create Verification</span>
+                                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+
+                    <!-- Added professional footer -->
+                    <div class="create-footer">
+                        <p>All fields are required. Verification will be active immediately after creation.</p>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </main>
